--- a/iOS/Events.iOS.csproj
+++ b/iOS/Events.iOS.csproj
@@ -141,6 +141,30 @@
     <BundleResource Include="Resources\ic_search.png" />
     <BundleResource Include="Resources\ic_search%402x.png" />
     <BundleResource Include="Resources\ic_search%403x.png" />
+    <BundleResource Include="Resources\ic_problem%403x.png" />
+    <BundleResource Include="Resources\ic_problem%402x.png" />
+    <BundleResource Include="Resources\ic_problem.png" />
+    <BundleResource Include="Resources\ic_plus%403x.png" />
+    <BundleResource Include="Resources\ic_plus%402x.png" />
+    <BundleResource Include="Resources\ic_plus.png" />
+    <BundleResource Include="Resources\ic_notification%403x.png" />
+    <BundleResource Include="Resources\ic_notification%402x.png" />
+    <BundleResource Include="Resources\ic_notification.png" />
+    <BundleResource Include="Resources\ic_more%403x.png" />
+    <BundleResource Include="Resources\ic_more%402x.png" />
+    <BundleResource Include="Resources\ic_more.png" />
+    <BundleResource Include="Resources\ic_location%403x.png" />
+    <BundleResource Include="Resources\ic_location%402x.png" />
+    <BundleResource Include="Resources\ic_location.png" />
+    <BundleResource Include="Resources\ic_help%403x.png" />
+    <BundleResource Include="Resources\ic_help%402x.png" />
+    <BundleResource Include="Resources\ic_help.png" />
+    <BundleResource Include="Resources\ic_calendar_profile%403x.png" />
+    <BundleResource Include="Resources\ic_calendar_profile%402x.png" />
+    <BundleResource Include="Resources\ic_calendar_profile.png" />
+    <BundleResource Include="Resources\ic_forward%403x.png" />
+    <BundleResource Include="Resources\ic_forward%402x.png" />
+    <BundleResource Include="Resources\ic_forward.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
