--- a/iOS/Events.iOS.csproj
+++ b/iOS/Events.iOS.csproj
@@ -171,6 +171,7 @@
     <BundleResource Include="Resources\img_test_md.jpg" />
     <BundleResource Include="Resources\img_test_profile.jpg" />
     <BundleResource Include="Resources\img_work.png" />
+    <BundleResource Include="Resources\img_weather.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
